# light3d

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build_native.bat  build_native.sh  build_wasm.sh  setup_deps.sh
.github/workflows/: ci.yml
_codeql_build_dir/examples/: simple_example
cmake/: emscripten.toolchain.cmake
doc/: testing.md
examples/: CMakeLists.txt  shell.html  simple_example.cpp
examples/glview/: CMakeLists.txt  main.cpp  vk_backend.cpp  vk_backend.h  vk_shaders.h
examples/webgpuview/: README.md  harness.html  index.html  package-lock.json  package.json  vite.config.js
examples/webgpuview/models/: README.md
examples/webgpuview/tests/: webgpu-feature-tests.html
examples/webgpuview/wasm/: CMakeLists.txt  binding.cc  build.sh  gltf_binding.cc  wasm_log.h
include/light3d/: camera.h  coroutine_support.h  light3d.h  light_prim.h  material.h  math.h  mesh_data.h  node_animation.h  obj_loader.h  prim.h  primitives.h  property.h  scene_graph.h  skel_animation.h  skeleton.h  skinning.h  stage.h  texture.h  timeline.h  xform.h
src/: CMakeLists.txt  camera.cpp  engine.cpp  light_prim.cpp  material.cpp  math.cpp  mesh_data.cpp  node_animation.cpp  obj_loader.cpp  prim.cpp  primitives.cpp  renderer_metal.mm  renderer_opengl.cpp  renderer_vulkan.cpp  renderer_webgl.cpp  skel_animation.cpp  skeleton.cpp  skinning.cpp  stage.cpp  texture.cpp  timeline.cpp  xform.cpp
tests/: CMakeLists.txt  test_helpers.h  test_material.cpp  test_math.cpp  test_obj_loader.cpp  test_primitives.cpp  test_scene_graph.cpp
tests/headless/: README.md  launch-chrome.sh  mcp-chrome.json  run-test.sh  test-mcp-connection.sh
